{
  "version": 4,
  "terraform_version": "1.1.0",
  "serial": 103,
  "lineage": "110d41e1-e1e1-761a-b54f-20bcf32d40aa",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-076651005996d0931",
            "association_id": "eipassoc-0de95b4355b95b05b",
            "domain": "vpc",
            "id": "eipalloc-076651005996d0931",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-0479d2a9c53eb0e1c",
            "private_dns": "ip-10-1-0-186.ap-south-1.compute.internal",
            "private_ip": "10.1.0.186",
            "public_dns": "ec2-43-204-176-163.ap-south-1.compute.amazonaws.com",
            "public_ip": "43.204.176.163",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "stage",
              "Name": "stage",
              "Project": "kfc"
            },
            "tags_all": {
              "Environment": "stage",
              "Name": "stage",
              "Project": "kfc"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "apache",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06489866022e12a14",
            "arn": "arn:aws:ec2:ap-south-1:485176971239:instance/i-0de31720e45da0267",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0de31720e45da0267",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "stage-pubkey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0f11e170076e9651f",
            "private_dns": "ip-10-1-0-193.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.0.193",
            "public_dns": "ec2-3-110-147-24.ap-south-1.compute.amazonaws.com",
            "public_ip": "3.110.147.24",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0ef8d709e9b2c751a",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c65e2906b78b6f98",
            "tags": {
              "Environment": "stage",
              "Name": "Apache",
              "Project": "kfc"
            },
            "tags_all": {
              "Environment": "stage",
              "Name": "Apache",
              "Project": "kfc"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0fa9fa2dc27c2ae87"
            ]
          },
          "dependencies": [
            "aws_subnet.public",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available",
            "data.http.myip",
            "aws_key_pair.publickey",
            "aws_security_group.alb",
            "aws_security_group.apache",
            "aws_security_group.bastion"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06489866022e12a14",
            "arn": "arn:aws:ec2:ap-south-1:485176971239:instance/i-09e2e414358f44e62",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09e2e414358f44e62",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "stage-pubkey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-08246cb09c4af0589",
            "private_dns": "ip-10-1-0-201.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.0.201",
            "public_dns": "ec2-3-110-186-7.ap-south-1.compute.amazonaws.com",
            "public_ip": "3.110.186.7",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-05cc89f709faf91b3",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c65e2906b78b6f98",
            "tags": {
              "Environment": "stage",
              "Name": "Bastion",
              "Project": "kfc"
            },
            "tags_all": {
              "Environment": "stage",
              "Name": "Bastion",
              "Project": "kfc"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0f048b462093cbe68"
            ]
          },
          "dependencies": [
            "aws_key_pair.publickey",
            "aws_security_group.bastion",
            "aws_subnet.public",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available",
            "data.http.myip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:485176971239:internet-gateway/igw-0f69ce7eec671fe59",
            "id": "igw-0f69ce7eec671fe59",
            "owner_id": "485176971239",
            "tags": {
              "Environment": "stage",
              "Name": "stage",
              "Project": "kfc"
            },
            "tags_all": {
              "Environment": "stage",
              "Name": "stage",
              "Project": "kfc"
            },
            "vpc_id": "vpc-0365f2259d7404eba"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:485176971239:loadbalancer/app/apache-alb/d6d9c3b965908f0f",
            "arn_suffix": "app/apache-alb/d6d9c3b965908f0f",
            "desync_mitigation_mode": "defensive",
            "dns_name": "apache-alb-2101508623.ap-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": true,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:ap-south-1:485176971239:loadbalancer/app/apache-alb/d6d9c3b965908f0f",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "apache-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0c42999c360716f30"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-01c66d010e04df0d0"
              },
              {
                "subnet_id": "subnet-0c65e2906b78b6f98"
              },
              {
                "subnet_id": "subnet-0ebe0f9c81e73ec6d"
              }
            ],
            "subnets": [
              "subnet-01c66d010e04df0d0",
              "subnet-0c65e2906b78b6f98",
              "subnet-0ebe0f9c81e73ec6d"
            ],
            "tags": {
              "Environment": "stage",
              "Name": "stage-Apache",
              "Project": "kfc"
            },
            "tags_all": {
              "Environment": "stage",
              "Name": "stage-Apache",
              "Project": "kfc"
            },
            "vpc_id": "vpc-0365f2259d7404eba",
            "zone_id": "ZP97RAFLXTNZK"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:485176971239:listener/app/apache-alb/d6d9c3b965908f0f/ca46dfafdc061234",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:485176971239:targetgroup/http/9218aaad22de64ac",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:485176971239:listener/app/apache-alb/d6d9c3b965908f0f/ca46dfafdc061234",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:485176971239:loadbalancer/app/apache-alb/d6d9c3b965908f0f",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.alb",
            "aws_lb_target_group.http",
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:485176971239:targetgroup/http/9218aaad22de64ac",
            "arn_suffix": "targetgroup/http/9218aaad22de64ac",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 6,
                "interval": 5,
                "matcher": "200",
                "path": "/index.html",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 2,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:485176971239:targetgroup/http/9218aaad22de64ac",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "http",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0365f2259d7404eba"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-south-1:485176971239:targetgroup/http/9218aaad22de64ac-20220830001109201200000001",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:485176971239:targetgroup/http/9218aaad22de64ac",
            "target_id": "i-0de31720e45da0267"
          },
          "dependencies": [
            "aws_security_group.apache",
            "aws_security_group.bastion",
            "aws_subnet.public",
            "data.aws_availability_zones.available",
            "aws_key_pair.publickey",
            "aws_lb_target_group.http",
            "aws_security_group.alb",
            "aws_instance.apache",
            "aws_vpc.vpc",
            "data.http.myip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "natgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-076651005996d0931",
            "connectivity_type": "public",
            "id": "nat-002e0bd3dd039daba",
            "network_interface_id": "eni-0479d2a9c53eb0e1c",
            "private_ip": "10.1.0.186",
            "public_ip": "43.204.176.163",
            "subnet_id": "subnet-0c65e2906b78b6f98",
            "tags": {
              "Environment": "stage",
              "Name": "stage",
              "Project": "kfc"
            },
            "tags_all": {
              "Environment": "stage",
              "Name": "stage",
              "Project": "kfc"
            }
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available",
            "aws_eip.eip",
            "aws_subnet.public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:485176971239:route-table/rtb-0a1b3f8e37618d4ac",
            "id": "rtb-0a1b3f8e37618d4ac",
            "owner_id": "485176971239",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-002e0bd3dd039daba",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "stage",
              "Name": "stage-Private",
              "Project": "kfc"
            },
            "tags_all": {
              "Environment": "stage",
              "Name": "stage-Private",
              "Project": "kfc"
            },
            "timeouts": null,
            "vpc_id": "vpc-0365f2259d7404eba"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.public",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available",
            "aws_eip.eip",
            "aws_nat_gateway.natgw"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:485176971239:route-table/rtb-045f3096b1dac2895",
            "id": "rtb-045f3096b1dac2895",
            "owner_id": "485176971239",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f69ce7eec671fe59",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "stage",
              "Name": "stage-Public",
              "Project": "kfc"
            },
            "tags_all": {
              "Environment": "stage",
              "Name": "stage-Public",
              "Project": "kfc"
            },
            "timeouts": null,
            "vpc_id": "vpc-0365f2259d7404eba"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "data",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0479ac72c91d1b240",
            "route_table_id": "rtb-0a1b3f8e37618d4ac",
            "subnet_id": "subnet-09c6f65e5326026ec"
          },
          "dependencies": [
            "aws_nat_gateway.natgw",
            "aws_route_table.private",
            "aws_subnet.data",
            "aws_subnet.public",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available",
            "aws_eip.eip"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c279f111d3462da5",
            "route_table_id": "rtb-0a1b3f8e37618d4ac",
            "subnet_id": "subnet-0b67d95653ec44c99"
          },
          "dependencies": [
            "aws_nat_gateway.natgw",
            "aws_route_table.private",
            "aws_subnet.data",
            "aws_subnet.public",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available",
            "aws_eip.eip"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02095781046434810",
            "route_table_id": "rtb-0a1b3f8e37618d4ac",
            "subnet_id": "subnet-0306b7a72e150fe58"
          },
          "dependencies": [
            "aws_nat_gateway.natgw",
            "aws_route_table.private",
            "aws_subnet.data",
            "aws_subnet.public",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available",
            "aws_eip.eip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0771802f229023eca",
            "route_table_id": "rtb-0a1b3f8e37618d4ac",
            "subnet_id": "subnet-0c8ae15bb84f37490"
          },
          "dependencies": [
            "aws_subnet.public",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available",
            "aws_eip.eip",
            "aws_nat_gateway.natgw",
            "aws_route_table.private",
            "aws_subnet.private"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c1aad3fd96243dff",
            "route_table_id": "rtb-0a1b3f8e37618d4ac",
            "subnet_id": "subnet-0b24e785a01d5d27f"
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_nat_gateway.natgw",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07160d575ffe1adde",
            "route_table_id": "rtb-0a1b3f8e37618d4ac",
            "subnet_id": "subnet-06759030eeb6482da"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available",
            "aws_eip.eip",
            "aws_nat_gateway.natgw",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03b8e4e8b4f0d4015",
            "route_table_id": "rtb-045f3096b1dac2895",
            "subnet_id": "subnet-0c65e2906b78b6f98"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-032a1852504c608cc",
            "route_table_id": "rtb-045f3096b1dac2895",
            "subnet_id": "subnet-0ebe0f9c81e73ec6d"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d39263ce47185bad",
            "route_table_id": "rtb-045f3096b1dac2895",
            "subnet_id": "subnet-01c66d010e04df0d0"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:485176971239:security-group/sg-0c42999c360716f30",
            "description": "Allow enduser inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c42999c360716f30",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "enduser for admin",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow enduser",
            "name_prefix": "",
            "owner_id": "485176971239",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "stage",
              "Name": "stage-Alb-sg",
              "Project": "kfc"
            },
            "tags_all": {
              "Environment": "stage",
              "Name": "stage-Alb-sg",
              "Project": "kfc"
            },
            "timeouts": null,
            "vpc_id": "vpc-0365f2259d7404eba"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "apache",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:485176971239:security-group/sg-0fa9fa2dc27c2ae87",
            "description": "Allow apache inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fa9fa2dc27c2ae87",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "httpd for alb",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c42999c360716f30"
                ],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "ssh for admin",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0f048b462093cbe68"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow apache",
            "name_prefix": "",
            "owner_id": "485176971239",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "stage",
              "Name": "stage-Apache-sg",
              "Project": "kfc"
            },
            "tags_all": {
              "Environment": "stage",
              "Name": "stage-Apache-sg",
              "Project": "kfc"
            },
            "timeouts": null,
            "vpc_id": "vpc-0365f2259d7404eba"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb",
            "aws_security_group.bastion",
            "aws_vpc.vpc",
            "data.http.myip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:485176971239:security-group/sg-0f048b462093cbe68",
            "description": "Allow ssh inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f048b462093cbe68",
            "ingress": [
              {
                "cidr_blocks": [
                  "103.110.170.85/32"
                ],
                "description": "ssh for admin",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow ssh",
            "name_prefix": "",
            "owner_id": "485176971239",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "stage",
              "Name": "stage-Bastion-sg",
              "Project": "kfc"
            },
            "tags_all": {
              "Environment": "stage",
              "Name": "stage-Bastion-sg",
              "Project": "kfc"
            },
            "timeouts": null,
            "vpc_id": "vpc-0365f2259d7404eba"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc",
            "data.http.myip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:485176971239:security-group/sg-099eab4689740d561",
            "description": "Allow rds inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-099eab4689740d561",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "apache to rds",
                "from_port": 3369,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0fa9fa2dc27c2ae87"
                ],
                "self": false,
                "to_port": 3369
              },
              {
                "cidr_blocks": [],
                "description": "bastion to rds",
                "from_port": 3369,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0f048b462093cbe68"
                ],
                "self": false,
                "to_port": 3369
              }
            ],
            "name": "allow rds",
            "name_prefix": "",
            "owner_id": "485176971239",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "stage",
              "Name": "stage-Rds-sg",
              "Project": "kfc"
            },
            "tags_all": {
              "Environment": "stage",
              "Name": "stage-Rds-sg",
              "Project": "kfc"
            },
            "timeouts": null,
            "vpc_id": "vpc-0365f2259d7404eba"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb",
            "aws_security_group.apache",
            "aws_security_group.bastion",
            "aws_vpc.vpc",
            "data.http.myip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "data",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:485176971239:subnet/subnet-09c6f65e5326026ec",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.1.6.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09c6f65e5326026ec",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "485176971239",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "stage",
              "Name": "Stage-Data-subnet-1",
              "Project": "kfc"
            },
            "tags_all": {
              "Environment": "stage",
              "Name": "Stage-Data-subnet-1",
              "Project": "kfc"
            },
            "vpc_id": "vpc-0365f2259d7404eba"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:485176971239:subnet/subnet-0b67d95653ec44c99",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.1.7.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b67d95653ec44c99",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "485176971239",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "stage",
              "Name": "Stage-Data-subnet-2",
              "Project": "kfc"
            },
            "tags_all": {
              "Environment": "stage",
              "Name": "Stage-Data-subnet-2",
              "Project": "kfc"
            },
            "vpc_id": "vpc-0365f2259d7404eba"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:485176971239:subnet/subnet-0306b7a72e150fe58",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.1.8.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0306b7a72e150fe58",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "485176971239",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "stage",
              "Name": "Stage-Data-subnet-3",
              "Project": "kfc"
            },
            "tags_all": {
              "Environment": "stage",
              "Name": "Stage-Data-subnet-3",
              "Project": "kfc"
            },
            "vpc_id": "vpc-0365f2259d7404eba"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:485176971239:subnet/subnet-0c8ae15bb84f37490",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.1.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c8ae15bb84f37490",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "485176971239",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "stage",
              "Name": "Stage-Private-subnet-1",
              "Project": "kfc"
            },
            "tags_all": {
              "Environment": "stage",
              "Name": "Stage-Private-subnet-1",
              "Project": "kfc"
            },
            "vpc_id": "vpc-0365f2259d7404eba"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:485176971239:subnet/subnet-0b24e785a01d5d27f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.1.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b24e785a01d5d27f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "485176971239",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "stage",
              "Name": "Stage-Private-subnet-2",
              "Project": "kfc"
            },
            "tags_all": {
              "Environment": "stage",
              "Name": "Stage-Private-subnet-2",
              "Project": "kfc"
            },
            "vpc_id": "vpc-0365f2259d7404eba"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:485176971239:subnet/subnet-06759030eeb6482da",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.1.5.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06759030eeb6482da",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "485176971239",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "stage",
              "Name": "Stage-Private-subnet-3",
              "Project": "kfc"
            },
            "tags_all": {
              "Environment": "stage",
              "Name": "Stage-Private-subnet-3",
              "Project": "kfc"
            },
            "vpc_id": "vpc-0365f2259d7404eba"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:485176971239:subnet/subnet-0c65e2906b78b6f98",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.1.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c65e2906b78b6f98",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "485176971239",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "stage",
              "Name": "Stage-Pub-subnet-1",
              "Project": "kfc"
            },
            "tags_all": {
              "Environment": "stage",
              "Name": "Stage-Pub-subnet-1",
              "Project": "kfc"
            },
            "vpc_id": "vpc-0365f2259d7404eba"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:485176971239:subnet/subnet-0ebe0f9c81e73ec6d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ebe0f9c81e73ec6d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "485176971239",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "stage",
              "Name": "Stage-Pub-subnet-2",
              "Project": "kfc"
            },
            "tags_all": {
              "Environment": "stage",
              "Name": "Stage-Pub-subnet-2",
              "Project": "kfc"
            },
            "vpc_id": "vpc-0365f2259d7404eba"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:485176971239:subnet/subnet-01c66d010e04df0d0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.1.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01c66d010e04df0d0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "485176971239",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "stage",
              "Name": "Stage-Pub-subnet-3",
              "Project": "kfc"
            },
            "tags_all": {
              "Environment": "stage",
              "Name": "Stage-Pub-subnet-3",
              "Project": "kfc"
            },
            "vpc_id": "vpc-0365f2259d7404eba"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:485176971239:vpc/vpc-0365f2259d7404eba",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-007dc6d83016e149e",
            "default_route_table_id": "rtb-06777adc2bf45d6d3",
            "default_security_group_id": "sg-0f04f7cd98bd75224",
            "dhcp_options_id": "dopt-000812df78327baed",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0365f2259d7404eba",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06777adc2bf45d6d3",
            "owner_id": "485176971239",
            "tags": {
              "Environment": "stage",
              "Name": "stage",
              "Project": "kfc"
            },
            "tags_all": {
              "Environment": "stage",
              "Name": "stage",
              "Project": "kfc"
            }
          }
        }
      ]
    }
  ]
}